--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </a>
         </li>
         <li class="mylinks">
-          <a href="/pdf/Resumé_Kith_Lamar.pdf" target="_blank"
+          <a href="pdf/Resumé_Kith.pdf" target="_blank"
             ><i class="fa fa-briefcase"></i>
             Resumé
           </a>
