--- a/index.html
+++ b/index.html
@@ -58,16 +58,16 @@
     <!-- PARALLAX-1 -->
     <div class="parallax1">
       <div class="logo">
-        <img src="img/logo.gif" alt="K I T H </> L A M A R" />
+        <img class="img"src="img/logo.gif" alt="K I T H </> L A M A R" />
       </div>
     </div>
 
     <section>
       <hr />
-      <h1>
+      <h3>
         Passionate about designing visually enticing content. An aspiring,
         self-taught web developer with an insatiable hunger for learning.
-      </h1>
+      </h3>
       <hr />
     </section>
     <!-- PARALLAX-2 -->
@@ -81,13 +81,13 @@
     </div>
     <section class="vibepost">
       <hr />
-      <h1>
+      <h3>
         <a href="#" target="_blank" rel="noopener noreferrer">
           <nobr class="vibe">V I B E</nobr>
           <sup><em>Post</em></sup>
         </a>
-        is an imageboard website that is creativity-centric.
-      </h1>
+        is an imageboard website that's creativity-centric.
+      </h3>
       <hr />
       <p>
         A site that allows users share images of their most recent projects and
@@ -104,9 +104,9 @@
     </section>
     <!-- <section>
       <hr />
-      <h1>
+      <h3>
         A site designed with safety and privacy as number one priority
-      </h1>
+      </h3>
       <hr />
       <p>
         User interactions are intentionally kept minimal and free from
@@ -144,7 +144,7 @@
             target="_blank"
             rel="noopener noreferrer"
           >
-            <h3>View My Account</h3></a
+            <h4>View My Account</h4></a
           >
           <p class="card-text">
             HackerRank is a technology hiring platform that is the standard for
@@ -163,7 +163,7 @@
             target="_blank"
             rel="noopener noreferrer"
           >
-            <h3>View My Account</h3></a
+            <h4>View My Account</h4></a
           >
           <p class="card-text">
             SoloLearn is a mobile social platform where everyone can learn
