--- a/index.html
+++ b/index.html
@@ -33,21 +33,21 @@
   </head>
   <body>
     <!-- NAV -->
-    <nav class="section">
+    <nav class="navbar">
       <ul>
-        <li class="mylinks">
+        <li class="navbar-links">
           <a href="https://github.com/qO-OpZzZzZz" target="_blank"
             ><i class="fa fa-github"></i>
             GitHub
           </a>
         </li>
-        <li class="mylinks">
+        <li class="navbar-links">
           <a href="pdf/Resumé_Kith.pdf" target="_blank"
             ><i class="fa fa-briefcase"></i>
             Resumé
           </a>
         </li>
-        <li class="mylinks">
+        <li class="navbar-links">
           <a href="mailto:kief.lamar20@gmail.com" target="_blank"
             ><i class="fa fa-envelope"></i>
             E-mail
