Fixed responsiveness on iPhone5/se

--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
 
     <section>
       <hr />
-      <h3>
+      <h1>
         Passionate about designing visually enticing content. An aspiring,
         self-taught web developer with an insatiable hunger for learning.
-      </h3>
+      </h1>
       <hr />
     </section>
     <!-- PARALLAX-2 -->
@@ -81,17 +81,17 @@
     </div>
     <section class="vibepost">
       <hr />
-      <h3>
+      <h1>
         <a href="#" target="_blank" rel="noopener noreferrer">
           <nobr class="vibe">V I B E</nobr>
           <sup><em>Post</em></sup>
         </a>
-        is an imageboard website that's creativity-centric.
-      </h3>
+        is an imageboard website that's creativity-centric. 
+      </h1>
       <hr />
       <p>
-        A site that allows users share images of their most recent projects and
-        users interact by choosing between three voting options on whether they
+        A site that allows users showcase their most recent projects and
+        and achievements through images; users interact by choosing between three voting options on whether they
         like "thumbs up", dislike "thumbs down" or if the post is not impressive
         there's a "meh" option as well. <br />
         <hr>
@@ -104,9 +104,9 @@
     </section>
     <!-- <section>
       <hr />
-      <h3>
+      <h1>
         A site designed with safety and privacy as number one priority
-      </h3>
+      </h1>
       <hr />
       <p>
         User interactions are intentionally kept minimal and free from
