--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 
     <section>
       <hr />
-      <h2>
+      <h1 class="marginalized">
         "Passionate about designing visually enticing content. An aspiring,
         self-taught web developer with an insatiable hunger for learning."
-      </h2>
+      </h1>
       <hr />
     </section>
     <!-- PARALLAX-2
@@ -68,13 +68,13 @@
     </div>
     <section class="vibepost">
       <hr />
-      <h2>
+      <h1>
         <a href="#" target="_blank" rel="noopener noreferrer">
           <nobr class="vibe">V I B E</nobr>
           <sup><em>Post</em></sup>
         </a>
         is an imageboard website that's creativity-centric.
-      </h2>
+      </h1>
       <hr />
       <p>
         A site that allows users showcase their most recent projects and and
@@ -94,8 +94,8 @@
     <!-- PARALLAX-3 -->
     <div class="parallax3">
       <section>
-        <h2>Learning Platforms</h2>
-        <p>
+        <h1 class="marginalized">Learning Platforms</h1>
+        <p class="marginalized">
           Being that there are multiple ways of learning and keeping up with the
           fast-paced industry of software development and technology as a whole;
           these learning platforms help me stay up to date, hone my skills and
