created 2 smaller versions of images for media queries-- mobile inability to view parallax effects

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           </a>
         </li>
         <li class="navbar-links">
-          <a href="pdf/Resumé_Kith.pdf" target="_blank"
+          <a href="/pdf/Resumé.pdf" target="_blank"
             ><i class="fa fa-briefcase"></i>
             Resumé
           </a>
