updated card notes

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
     <title>Play</title>
   </head>
   <body>
+
+    
     <!-- NAV -->
     <header class="header">
       <a href="" class="main-logo">KITH LAMAR</a>
@@ -76,8 +78,7 @@
           <div id="logo1"></div>
           <h3>Front-end</h3>
           <p>
-            I've been focused on learning CSS3, HTML5 and frameworks such as
-            JQuery, Bulma, Bootstrap and React. Most of the tools I'm using are "Front-end" centric mostly because of my <a href="https://kithlamar.wordpress.com/my-sketches/" target="_blank" rel="noopener noreferrer">art</a> background.
+            I've been focused on learning CSS3, HTML5. Libraries and frameworks such as JQuery, Bulma, Bootstrap and React. Most of the tools I'm using are "Front-end" centric mostly because of my <a href="https://kithlamar.wordpress.com/my-sketches/" target="_blank" rel="noopener noreferrer">art</a> background.
           </p>
         </span>
       </section>
