--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!--  SCROLL MAGIC INDICATORS -->
     <script src="/build/js/scripts.min.js"></script>
     <!-- MAIN JS -->
-    <title>Play</title>
+    <title>KITH | LAMAR</title>
   </head>
   <body>
 
