--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <h3>Back-end</h3>
           <p>
             Though most of my tools are for the client side, my "Back-end" tools
-            and experiences are in SQL for database, Git on my <a href="https://github.com/k-i-t-h" target="_blank" rel="noopener noreferrer">GitHub</a> which is a <a href="https://en.wikipedia.org/wiki/Version_control" target="_blank" rel="noopener noreferrer">Version Control System,</a>  programming languages such
+            include SQL for database, Git commands through my use of <a href="https://github.com/k-i-t-h" target="_blank" rel="noopener noreferrer">GitHub,  programming languages such
             as Ruby, JavaScript and Python.
           </p>
         </span>
